# givesats

./: LICENSE  README.md  manage.py  pyproject.toml
givesats/: asgi.py  settings.py  urls.py  wsgi.py
